# LL-ocle_coMics

./: .gitignore  README.md  app.py  config.json  designdoc.txt  instructions.txt  pyproject.toml  readme.md  requirements.txt  run.sh  run_debug.sh  test_context_implementation.py
src/ll_ocl_comics/: __init__.py  apis.py  app.py  helpers.py  main.py  mokuro_changes.py  mokuro_translator_config.json  requirements.txt
tests/: test_helpers.py
